SampleExample/docker-demo/dockerdemo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dockerdemo
  namespace: deployment-dockerdemo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dockerdemo
  template:
    metadata:
      labels:
        app: dockerdemo
    spec:
      containers:
      - name: dockerdemo
        image: spartha1995/dockerdemo:v1
        ports:
        - containerPort: 80
