SampleExample/docker-demo/dockerdemo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dockerdemo-svc
  namespace: deployment-dockerdemo
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: dockerdemo
