SampleExample/docker-demo/ingress-docckerdemo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress-dockerdemo
  namespace: deployment-dockerdemo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: dockerdemo-svc
          servicePort: 80
        path: /dockerdemo(/|$)(.*)
